# PaCT

./: .gitignore  README.md  contracts.py  experiment.py  main.py  pyproject.toml
model/: compo.py  model.py
result/benchmark/pact/w_attr_w1/BPI_Challenge_2012_A/: results.csv
result/benchmark/pact/w_attr_w1/BPI_Challenge_2012_O/: results.csv
result/benchmark/pact/w_attr_w1/BPI_Challenge_2013_closed_problems/: results.csv
result/benchmark/pact/w_attr_w1/Helpdesk/: results.csv
result/benchmark/pact/w_attr_w1/SEPSIS/: results.csv
result/benchmark/pact/w_attr_w1/bpi_challenge_2013_incidents/: results.csv
result/benchmark/pact/w_attr_w1/env_permit/: results.csv
result/benchmark/pact/w_attr_w2/BPI_Challenge_2012_A/: results.csv
result/benchmark/pact/w_attr_w2/BPI_Challenge_2012_O/: results.csv
result/benchmark/pact/w_attr_w2/BPI_Challenge_2013_closed_problems/: results.csv
result/benchmark/pact/w_attr_w2/Helpdesk/: results.csv
result/benchmark/pact/w_attr_w2/SEPSIS/: results.csv
result/benchmark/pact/w_attr_w2/bpi_challenge_2013_incidents/: results.csv
result/benchmark/pact/w_attr_w2/env_permit/: results.csv
result/benchmark/pact/w_attr_w4/BPI_Challenge_2012_A/: results.csv
result/benchmark/pact/w_attr_w4/BPI_Challenge_2012_O/: results.csv
result/benchmark/pact/w_attr_w4/BPI_Challenge_2013_closed_problems/: results.csv
result/benchmark/pact/w_attr_w4/Helpdesk/: results.csv
result/benchmark/pact/w_attr_w4/SEPSIS/: results.csv
scripts/figures/: make_figures.py
utils/: config.py  data_io.py  dataset.py  metrics.py
(+57 files in other folders)
